# twitch-ad-avoider

./: .coverage  .flake8  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONFIG-REFERENCE.md  CONTRIBUTING.md  GUI_README.md  Makefile  PACKAGING.md  PLAYER-CONFIG.md  README.md  SECURITY.md  TODO.md  TROUBLESHOOTING.md  __init__.py  __main__.py  build.ps1  build_executable.py  investigate-todo-report.md  main.py  main_qt.py  pyproject.toml  requirements.txt  run.ps1  run.ps1 - Shortcut.lnk  run_gui.bat  run_gui.ps1  run_gui.py  test_chat_fix.py  twitchadavoider.spec  twitchadavoider_optimized.spec  update-daily-exe.ps1  watch_stream.py
.claude/: settings.local.json
config/: auth_token.enc  katch.example.json
docs/: Makefile  conf.py  contributing.rst  generate_docs.py  index.rst  installation.rst  quickstart.rst  security.rst
gui/: __init__.py  favorites_manager.py  status_manager.py  stream_gui.py  stream_gui_refactored.py  themes.py
gui_qt/: main_window.py  popup_utils.py  stream_gui.py
gui_web/: app.jsx  helpers.jsx  index.html
scripts/: TwitchUtilities.psm1  build.ps1  build_executable.py  generate_pycparser_tables.py  gui_test_support.py  probe_twitch_vod_audio.py  release.ps1  run.ps1  run_demo_server.py  twitchadavoider.spec  update-daily-exe.ps1
session-notes/: session-01-favorites-live-highlight-and-daily-exe-updater.md  session-02-favorites-pinned-section-headers.md  session-03-vlc-reconnect-hardening-and-cache-wiring.md  session-04-dropdown-popup-host-corner-fix-progress.md  session-05-dropdown-popup-shadow-effect-fix.md  session-06-stream-preview-thumbnail-and-resize-bug.md  session-07-preview-resize-fix-and-title-overlay.md  session-08-preview-dimming-and-title-regression-fix.md  session-09-preview-review-findings-and-follow-up-fixes.md  session-10-low-latency-tuning.md  session-11-startup-favorites-refresh-fix.md  session-12-stream-manager-redesign-implementation.md  session-13-pywebview-migration-milestone-0-1.md  session-14-webview-cutover-and-embedded-playback.md  session-15-webview-ui-polish-and-preview-sizing.md  session-16-project-cleanup-and-root-organization.md  session-17-onedir-build-fix-and-config-data-loss.md  session-18-close-hang-fix-and-auto-collapse-panels.md  session-19-twitch-vod-audio-probe-and-transcription-path.md  session-20-twitch-vod-probe-debug-silence-offset-and-progress.md  session-21-live-and-hover-notification-sounds-restored.md  session-22-clip-offset-scrub-bar-and-go-live-fixes.md  session-23-day-scoped-recording-history-stages-1-3.md  session-24-clip-split-button-and-toast-fixes.md  session-25-stream-latency-autocatchup-and-prefetch-segments.md  session-26-simplify-cleanup-pass.md  session-27-merged-scrub-bar-and-demo-harness.md  session-28-video-maximize-fullscreen-fix.md  session-29-thumbnail-and-pinned-favorites-improvements.md
src/: __init__.py  auth_manager.py  config_manager.py  constants.py  error_recovery.py  exceptions.py  favorites_manager.py  logging_config.py  player_args.py  recording_index.py  runtime_check.py  status_monitor.py  stream_preview.py  streamlink_status.py  twitch_api.py  twitch_chat_client.py  twitch_viewer.py  validators.py  web_stream_service.py  webapi.py
tests/: README.md  conftest.py  test_auth_manager.py  test_chat_panel.py  test_chat_panel_preview_dimming.py  test_chat_panel_preview_resize.py  test_config_validation.py  test_favorites_manager.py  test_favorites_panel.py  test_katch_config.py  (+19 more)
(+45 files in other folders)
